--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "sp-gpt",
   "private": true,
   "homepage": " https://github.com/SukhdebPatra/my-ai-chatbot.git",
-
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -10,8 +9,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^19.0.0",
